--- a/htc/package.json
+++ b/htc/package.json
@@ -19,16 +19,21 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@ng-select/ng-select": "latest",
+    "@ngx-translate/core": "latest",
+    "@ngx-translate/http-loader": "latest",
     "angular-bootstrap-md": "^9.0.0",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ngx-bootstrap": "^5.5.0",
+    "ngx-pagination": "^5.0.0",
+    "ngx-pagination-bootstrap": "^1.6.0",
     "popper": "^1.0.1",
+    "popper.js": "^1.14.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@ngx-translate/core": "latest",
-    "@ngx-translate/http-loader": "latest"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.6",
