--- a/htc/angular.json
+++ b/htc/angular.json
@@ -30,8 +30,8 @@
             "styles": [
               "src/styles.scss",
               "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-              "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
             ],
             "stylePreprocessorOptions": {
