--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
 	<version>0.0.1</version>
 	<packaging>pom</packaging>
     <modules>
-        <module>htc</module>
+		<module>backend</module>
+        <module>frontend</module>
     </modules>
 
 	<name>htc</name>
