--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>backend</artifactId>
     <version>0.0.1</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>backend</name>
 
     <properties>
