--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,11 @@
     "@ngx-translate/core": "latest",
     "@ngx-translate/http-loader": "latest",
     "angular-bootstrap-md": "^9.0.0",
+    "angular-notifier": "^6.0.1",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "keycloak-js": "^9.0.2",
     "ngx-bootstrap": "^5.5.0",
     "ngx-pagination": "^5.0.0",
     "ngx-pagination-bootstrap": "^1.6.0",
