--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.6",
+    "@angular/animations": "^9.0.7",
     "@angular/cdk": "^9.1.3",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
@@ -32,6 +32,7 @@
     "ngx-bootstrap": "^5.5.0",
     "ngx-pagination": "^5.0.0",
     "ngx-pagination-bootstrap": "^1.6.0",
+    "ngx-toastr": "^12.0.1",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "~6.5.4",
