--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.4.1",
     "keycloak-js": "^9.0.2",
     "ngx-bootstrap": "^5.5.0",
+    "ngx-mask": "^8.2.0",
     "ngx-pagination": "^5.0.0",
     "ngx-pagination-bootstrap": "^1.6.0",
     "ngx-toastr": "^12.0.1",
