--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
-    "@ng-select/ng-select": "^3.7.3",
+    "@ng-select/ng-select": "3.3.0",
     "@ngx-translate/core": "latest",
     "@ngx-translate/http-loader": "latest",
     "angular-bootstrap-md": "^9.0.0",
