--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -31,7 +31,8 @@
               "src/styles.scss",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/font-awesome/css/font-awesome.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
+              "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
             ],
             "stylePreprocessorOptions": {
@@ -39,6 +40,8 @@
             },
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/chart.js/dist/Chart.js",
+              "node_modules/hammerjs/hammer.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "src/assets/js/overrides.js"
