--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,13 +20,15 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
-    "@ng-select/ng-select": "3.3.0",
+    "@ng-select/ng-select": "latest",
     "@ngx-translate/core": "latest",
     "@ngx-translate/http-loader": "latest",
     "angular-bootstrap-md": "^9.0.0",
     "angular-notifier": "^6.0.1",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.5.0",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "keycloak-js": "^9.0.2",
     "ngx-bootstrap": "^5.5.0",
