--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -44,7 +44,8 @@
               "node_modules/hammerjs/hammer.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "src/assets/js/overrides.js"
+              "src/assets/js/overrides.js",
+              "src/assets/js/mdb.min.js"
             ]
           },
           "configurations": {
