remove build stage add path to dockerfile

--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -19,18 +19,19 @@ pipeline {
                 }
             }
         }
-
+/*
         stage('Build') {
             steps {
                 sh 'mvn clean package'
             }
         }
-
+*/
         stage('Building image') {
             steps {
                 script {
                     docker.withRegistry(registry, registryCredential) {
-                        def customImage = docker.build("${env.IMAGE_NAME}:${env.BUILD_ID}")
+                        def dockerfile = 'Dockerfile.test'
+                        def customImage = docker.build("${env.IMAGE_NAME}:${env.BUILD_ID}", "-f backend/Dockerfile .")
                         customImage.push()
                     }
                 }
