--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,12 @@
 FROM openjdk:8-alpine
 
 ARG DEPENDENCY=./target/htc
+ARG PATH=./target/htc
 
 COPY ${DEPENDENCY}/BOOT-INF/lib /usr/app/BOOT-INF/lib
 COPY ${DEPENDENCY}/org /usr/app/org
 COPY ${DEPENDENCY}/META-INF /usr/app/META-INF
-COPY ${DEPENDENCY}/BOOT-INF/classes /usr/app/BOOT-INF/classes
+COPY ${PATH}/htc.war /usr/app/
 
 WORKDIR /usr/app
 ENTRYPOINT ["java", "-cp", "./", "org.springframework.boot.loader.JarLauncher"]
