--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -41,16 +41,16 @@
             </goals>
             <phase>initialize</phase>
           </execution>
-<!--          <execution>-->
-<!--            <id>npm-run-build</id>-->
-<!--            <goals>-->
-<!--              <goal>npm</goal>-->
-<!--            </goals>-->
-<!--            <phase>generate-resources</phase>-->
-<!--            <configuration>-->
-<!--              <arguments>run build</arguments>-->
-<!--            </configuration>-->
-<!--          </execution>-->
+          <execution>
+            <id>npm-run-build</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <phase>generate-resources</phase>
+            <configuration>
+              <arguments>run build</arguments>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
 
