--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,14 @@
     "angular-bootstrap-md": "^9.0.0",
     "angular-notifier": "^6.0.1",
     "bootstrap": "^4.4.1",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "keycloak-js": "^9.0.2",
+    "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.5.0",
+    "ngx-echarts": "^4.2.2",
     "ngx-mask": "^8.2.0",
     "ngx-pagination": "^5.0.0",
     "ngx-pagination-bootstrap": "^1.6.0",
@@ -58,6 +60,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "ng2-charts-schematics": "^0.1.7",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
