--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,21 @@
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
+    "@angular/localize": "^9.1.3",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ng-select/ng-select": "latest",
     "@ngx-translate/core": "latest",
     "@ngx-translate/http-loader": "latest",
     "angular-bootstrap-md": "^9.0.0",
+    "angular-calendar": "^0.28.11",
     "angular-notifier": "^6.0.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
+    "date-fns": "^2.12.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
