--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "@ngx-translate/http-loader": "latest",
     "angular-bootstrap-md": "^9.0.0",
     "angular-calendar": "^0.28.11",
+    "angular-lib-yandex-maps": "0.0.9",
     "angular-notifier": "^6.0.1",
+    "angular8-yandex-maps": "^1.12.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
