--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "ngx-pagination": "^5.0.0",
     "ngx-pagination-bootstrap": "^1.6.0",
     "ngx-toastr": "^12.0.1",
+    "ngx-ui-loader": "^9.1.1",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "~6.5.4",
