--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,10 +27,8 @@
     "@ngx-translate/http-loader": "latest",
     "angular-bootstrap-md": "^9.0.0",
     "angular-calendar": "^0.28.11",
-    "angular-lib-yandex-maps": "0.0.9",
     "angular-notifier": "^6.0.1",
     "angular8-yandex-maps": "^1.12.0",
-    "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "date-fns": "^2.12.0",
@@ -43,7 +41,6 @@
     "ngx-echarts": "^4.2.2",
     "ngx-mask": "^8.2.0",
     "ngx-pagination": "^5.0.0",
-    "ngx-pagination-bootstrap": "^1.6.0",
     "ngx-toastr": "^12.0.1",
     "ngx-ui-loader": "^9.1.1",
     "popper": "^1.0.1",
@@ -60,6 +57,8 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "angular-lib-yandex-maps": "0.0.9",
+    "bootstrap": "^4.4.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -69,9 +68,11 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "ng2-charts-schematics": "^0.1.7",
+    "ngx-pagination-bootstrap": "^1.6.0",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "xxxxx": "^1.0.3"
   }
 }
