--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,7 +60,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "angular-lib-yandex-maps": "0.0.9",
-    "bootstrap": "4.4.1",
+    "bootstrap": "^4.5.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
