--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,8 +38,10 @@
     "jquery": "^3.4.1",
     "keycloak-js": "^9.0.2",
     "ng2-charts": "^2.3.0",
+    "ng2-pdf-viewer": "^6.3.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-echarts": "^4.2.2",
+    "ngx-extended-pdf-viewer": "^4.0.0-alpha.4",
     "ngx-mask": "^8.2.0",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^12.0.1",
