--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -12,6 +12,11 @@ pipeline {
         maven 'mvn-3.6.3'
     }
     stages {
+        stage('Send message telegram') {
+            steps {
+                sh 'curl -s -X POST https://api.telegram.org/bot1200725402:AAFDvrnCbLLdPai9jmhQzj9QI0cWWfvSnGs/sendMessage -d chat_id=-394666533 -d text="Starting deploy htc-front"'
+            }
+        }
 
 
         stage('Build') {
@@ -72,9 +77,11 @@ pipeline {
     post {
         success {
             echo 'All good, we passed tests.'
+            sh 'curl -s -X POST https://api.telegram.org/bot1200725402:AAFDvrnCbLLdPai9jmhQzj9QI0cWWfvSnGs/sendMessage -d chat_id=-394666533 -d text="Finished deploy htc-front"'
         }
         failure {
             sh "docker service update --rollback ${SERVICE_NAME}"
+            sh 'curl -s -X POST https://api.telegram.org/bot1200725402:AAFDvrnCbLLdPai9jmhQzj9QI0cWWfvSnGs/sendMessage -d chat_id=-394666533 -d text="Error deploying htc-front"'
         }
     }
 }
