--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "keycloak-js": "^9.0.2",
+    "moment": "^2.27.0",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-echarts": "^4.2.2",
