--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,16 +28,12 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-
-              "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-              "src/styles.scss",
-              "node_modules/ngx-toastr/toastr.css",
               "node_modules/font-awesome/css/font-awesome.css",
-
-
-              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "src/styles.scss"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["./node_modules"]
@@ -45,12 +41,10 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "src/assets/js/mdb.min.js",
               "node_modules/chart.js/dist/Chart.js",
               "node_modules/hammerjs/hammer.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "src/assets/js/overrides.js"
-
             ]
           },
           "configurations": {
