--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -33,7 +33,8 @@
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/css/datatables.min.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["./node_modules"]
@@ -44,7 +45,8 @@
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/chart.js/dist/Chart.js",
               "node_modules/hammerjs/hammer.min.js",
-              "src/assets/js/overrides.js"
+              "src/assets/js/overrides.js",
+              "src/assets/js/datatables.min.js"
             ]
           },
           "configurations": {
