--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,10 +28,13 @@
     "@ngx-translate/http-loader": "latest",
     "angular-bootstrap-md": "^9.0.0",
     "angular-calendar": "^0.28.11",
+    "angular-datatables": "^9.0.2",
     "angular-notifier": "^6.0.1",
     "angular8-yandex-maps": "^1.12.0",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "datatables.net": "^1.10.21",
+    "datatables.net-dt": "^1.10.21",
     "date-fns": "^2.12.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
@@ -56,8 +59,10 @@
     "@angular/cli": "^9.1.4",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.0",
     "@types/node": "^12.11.1",
     "angular-lib-yandex-maps": "0.0.9",
     "bootstrap": "^4.5.0",
