--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,13 +41,13 @@
     "jquery": "^3.4.1",
     "keycloak-js": "^9.0.2",
     "moment": "^2.27.0",
-    "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-echarts": "^4.2.2",
     "ngx-mask": "^8.2.0",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^12.0.1",
     "ngx-ui-loader": "^9.1.1",
+    "perfect-scrollbar": "^1.5.0",
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "~6.5.4",
