--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "htc",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config  proxy.conf.json --host htc.dilau.kz --port 80",
@@ -26,11 +26,12 @@
     "@ng-select/ng-select": "latest",
     "@ngx-translate/core": "latest",
     "@ngx-translate/http-loader": "latest",
-    "angular-bootstrap-md": "^9.0.0",
+    "angular-bootstrap-md": "^9.3.1",
     "angular-calendar": "^0.28.11",
     "angular-datatables": "^9.0.2",
     "angular-notifier": "^6.0.1",
     "angular8-yandex-maps": "^1.12.0",
+    "animate.css": "^4.1.0",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "datatables.net": "^1.10.21",
