--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,17 +8,19 @@
     "build": "ng build --prod --output-path dist/META-INF/resources --aot",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.7",
-    "@angular/cdk": "^9.1.3",
+    "@angular/animations": "^9.1.12",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
     "@angular/localize": "^9.1.3",
+    "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
