--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "htc",
-  "version": "0.0.18",
+  "version": "0.0.20",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config  proxy.conf.json --host htc.dilau.kz --port 80",
     "prebuild": "npm --no-git-tag-version version patch",
-    "build": "ng build --prod --output-path dist/META-INF/resources --aot",
+    "build": "webpack",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -81,6 +81,15 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5",
-    "xxxxx": "^1.0.3"
+    "xxxxx": "^1.0.3",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0",
+    "uglifyjs-webpack-plugin": "2.2.0",
+    "html-loader": "1.1.0",
+    "html-webpack-plugin": "4.3.0",
+    "css-loader": "3.6.0",
+    "file-loader": "6.0.0",
+    "mini-css-extract-plugin": "0.9.0"
   }
 }
