--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config  proxy.conf.json --host htc.dilau.kz --port 80",
     "prebuild": "npm --no-git-tag-version version patch",
-    "build": "webpack",
+    "build": "ng build --prod --output-path dist/META-INF/resources --aot",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
