--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -36,7 +36,8 @@
               "node_modules/animate.css/animate.css",
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/css/angular-calendar.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["./node_modules"]
