--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@ng-select/ng-select": "latest",
     "@ngx-translate/core": "latest",
     "@ngx-translate/http-loader": "latest",
+    "@stomp/stompjs": "^4.0.8",
     "angular-bootstrap-md": "^9.3.1",
     "angular-calendar": "^0.28.11",
     "angular-datatables": "^9.0.2",
@@ -52,6 +53,7 @@
     "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "~6.5.4",
+    "sockjs": "^0.3.20",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
