--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,10 @@
     "angular-lib-yandex-maps": "0.0.9",
     "bootstrap": "^4.5.0",
     "codelyzer": "^5.1.2",
+    "css-loader": "3.6.0",
+    "file-loader": "6.0.0",
+    "html-loader": "1.1.0",
+    "html-webpack-plugin": "4.3.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
@@ -77,21 +81,13 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "mini-css-extract-plugin": "0.9.0",
     "ng2-charts-schematics": "^0.1.7",
     "ngx-pagination-bootstrap": "^1.6.0",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5",
-    "xxxxx": "^1.0.3",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0",
-    "uglifyjs-webpack-plugin": "2.2.0",
-    "html-loader": "1.1.0",
-    "html-webpack-plugin": "4.3.0",
-    "css-loader": "3.6.0",
-    "file-loader": "6.0.0",
-    "mini-css-extract-plugin": "0.9.0"
+    "xxxxx": "^1.0.3"
   }
 }
