--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,10 +55,11 @@
     "rxjs": "~6.5.4",
     "sockjs": "^0.3.20",
     "tslib": "^1.10.0",
+    "webpack-cli": "^3.3.12",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.6",
+    "@angular-devkit/build-angular": "^0.1000.7",
     "@angular/cli": "^9.1.4",
     "@angular/compiler-cli": "~9.1.12",
     "@angular/language-service": "~9.1.12",
